[workspace]
resolver = "2"
members = ["_exp/exp", "uicolors", "crates/import_vscode", "crates/theme", "lv"]

[workspace.dependencies]
clap = { version = "4.5.4", features = ["derive"] }
gpui = { git = "https://github.com/zed-industries/zed" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_json_lenient = "0.2.1"
tokio = "1.37.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
