[workspace]
resolver = "2"
members = [
    "_exp/exp",
    "uicolors",
    "crates/import_vscode",
    "crates/theme",
    "lv",
    "crates/gpui_ext",
    "crates/blocks",
    "storybook",
]

[workspace.dependencies]
blocks = { path = "crates/blocks" }

# gpui = { git = "https://github.com/zed-industries/zed" }
gpui = { path = "/Users/i/ws/clone/zed/crates/gpui" }
gpui_ext = { path = "crates/gpui_ext" }

anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
image = "0.23.14"
indexmap = { version = "2.2.6", features = ["serde"] }
once_cell = "1.19.0"
rand = "0.8.5"
rust-embed = "8.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_json_lenient = "0.2.1"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
