[package]
name = "lv"
version = "0.1.0"
edition = "2021"

[dependencies]
clap.workspace = true
gpui.workspace = true
gpui_ext = { version = "0.1.0", path = "../crates/gpui_ext" }
serde.workspace = true
serde_json.workspace = true
serde_json_lenient.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
vscode_theme = "0.2.0"
