[package]
name = "storybook"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
blocks.workspace = true
clap = { workspace = true }
gpui = { workspace = true }
gpui_ext = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
