[package]
name = "uicolors"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
image = { workspace = true }
clap = { workspace = true, features = ["derive"] }
gpui.workspace = true
gpui_ext = { version = "0.1.0", path = "../crates/gpui_ext" }
rust-embed = "8.3.0"
tracing.workspace = true
tracing-subscriber = "0.3.18"
serde.workspace = true
serde_json.workspace = true
rand = "0.8.5"
once_cell = "1.19.0"
