[package]
name = "import_vscodetheme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
gpui.workspace = true
serde = { version = "1.0.197", features = ["derive"] }
serde_json_lenient = "0.2.1"
theme = { version = "0.1.0", path = "../theme" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
vscode_theme = "0.2.0"
